# Tech-Misc-Projects

./: HVGCommentMagicks.py  aesutil.py  brantsteelerandomiser.py  pyproject.toml  randompass.py  reg.py  requirements.txt  scpidgen.py
docs/: CNAME  index.md
