[tool.poetry]
name = "TechMisc"
version = "0"
description = "Tech's miscellaneous stuff"
license = "EPL-2.0"
authors = ["Tech. TTGames <50541739+Tech-TTGames@users.noreply.github.com>"]
repository = "https://github.com/Tech-TTGames/Tech-Misc-Projects"

[tool.poetry.dependencies]
python = "^3.9"
pycryptodome = "^3.19.0"
pyperclip = "^1.8.2"
colorama = "^0.4.6"
yapf = "^0.40.2"
pylint = "^3.0.2"

[tool.yapf]
based_on_style = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
