[tool.poetry]
name = "TechMisc"
version = "0"
description = "Tech's miscellaneous stuff"
license = "EPL-2.0"
authors = ["Tech. TTGames <50541739+Tech-TTGames@users.noreply.github.com>"]
repository = "https://github.com/Tech-TTGames/Tech-Misc-Projects"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pycryptodome = "^3.19.1"
pyperclip = "^1.8.2"
colorama = "^0.4.6"
yapf = "^0.40.2"
pylint = "^3.0.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.21.0"
lxml = "^5.2.2"

[tool.yapf]
based_on_style = "google"
column_limit = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
